syntax = "proto3";

option java_package = "com.apivideo.grpc";
option java_outer_classname = "ViewsProto";
option objc_class_prefix = "AVP";

package views;

// The request message for view details.
message ViewRequest {
  int32 view_id = 1;
  int32 video_id = 2;
  int32 user_id = 3;
}

// The response message containing the view details.
message ViewResponse {
  int32 view_id = 1;
  int32 video_id = 2;
  int32 user_id = 3;
  string message = 4;
}

// The response message containing a list of viewed video IDs.
message ViewListResponse {
  repeated int32 video_ids = 1;
}

// The response message containing the status of the request.
message ViewStatusResponse {
  string message = 1;
}

// The view service definition.
service ViewService {
  // Adds a new view
  rpc AddView (ViewRequest) returns (ViewStatusResponse);

  // Retrieves viewed video IDs by user ID
  rpc GetViewedVideoIds (ViewRequest) returns (ViewListResponse);

  // Deletes views by video ID
  rpc DeleteViewsByVideoId (ViewRequest) returns (ViewStatusResponse);

  // Clears views by user ID
  rpc ClearViewedVideos (ViewRequest) returns (ViewStatusResponse);
}
